<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="32dp">

    <RadioGroup
        android:id="@+id/sortByRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/sortByFirstName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortByTitle">

        <RadioButton
            android:id="@+id/sortByFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/first_name"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/sortByLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimary"
            android:text="@string/last_name"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/sortByTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sortByOkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ok"
        android:textColor="@color/colorAccent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortByRadioGroup" />

    <Button
        android:id="@+id/sortByCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_buttons"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortByRadioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>